--- a/prosessrapport/gruppen.tex
+++ b/prosessrapport/gruppen.tex
@@ -1,5 +1,5 @@
 \section{Presentasjon av gruppen}
-Da \emph{"En spillverden på ett semester"} dreier seg om det å skape og utvikle et spillkonsept viste landsbyen seg å være svært attraktiv for studenter innenfor datarelaterte fag. Også vår gruppe reflekterte dette, og tre av gruppens fem medlemmer har datafaglig bakgrunn.
+Da \emph{''En spillverden på ett semester''} dreier seg om det å skape og utvikle et spillkonsept viste landsbyen seg å være svært attraktiv for studenter innenfor datarelaterte fag. Også vår gruppe reflekterte dette, og tre av gruppens fem medlemmer har datafaglig bakgrunn.
 
 \subsection{Gruppens medlemmer}
 	\subsubsection{Andreas Røysland Aarnes}
@@ -8,9 +8,9 @@ Da \emph{"En spillverden på ett semester"} dreier seg om det å skape og utvikl
 	Gruppen ser på Andreas som en optimistisk og entusiastisk person. Han er ivrig og sosial, noe som gir ham en stor innflytelse på gruppen. En av hans svake sider er at hans entusiasme og innflytelse kan ha en negativ innvirkning på gruppens avgjørelser, ettersom han kan virke noe dominerende.
 
 	\subsubsection{Christian Aleksander Lysne}
-	Christian er 22 år, født og oppvokst i Trondheim. Han studerer prosjektledelse med spesialisering i industriel økonomi, og er tidligere utdannet som dataingeniør. På fritiden spiller Christian basketball og jobber med spillfirmaet sitt, \emph{Peekaboo}. Det er denne spillbakgrunnen som var avgjørende for at Christian valgte denne EiT- landsbyen. Han hadde ikke forventet å lære noe nytt på EiT, men ble positivt overrasket.   
+	Christian er 22 år, født og oppvokst i Trondheim. Han studerer prosjektledelse med spesialisering i industriell økonomi, og er tidligere utdannet som dataingeniør. På fritiden spiller Christian basketball og jobber med spillfirmaet sitt, \emph{Peekaboo}. Det er denne spillbakgrunnen som var avgjørende for at Christian valgte denne EiT- landsbyen. Han hadde ikke forventet å lære noe nytt på EiT, men ble positivt overrasket.   
 
-	Gruppens syn på Christian er at han virker som en rolig person som alltid har kontroll. Han blir fort engasjert av andres inspill og er flink til å lytte til de andre på gruppen. Enkelte av gruppemedlemmene mener Christian er en typisk lærer/leder; en man henvender seg til fordi han alltid har kontroll og er hjelpsom. Christian mener selv at han har en tendens til å kjede seg når han jobber med det samme lenge. Han liker variert arbeid.
+	Gruppens syn på Christian er at han virker som en rolig person som alltid har kontroll. Han blir fort engasjert av andres innspill og er flink til å lytte til de andre på gruppen. Enkelte av gruppemedlemmene mener Christian er en typisk lærer/leder; en man henvender seg til fordi han alltid har kontroll og er hjelpsom. Christian mener selv at han har en tendens til å kjede seg når han jobber med det samme lenge. Han liker variert arbeid.
 
 	\subsubsection{Ina Sander Pedersen}
 	26 år gamle Ina studerer bioteknologi og kommer fra Vadsø. Hun hadde ikke noe erfaring med spillutvikling fra før og valgte denne EiT-landsbyen fordi den hørtes spennende og annerledes ut. I starten var hun ganske skeptisk til EiT, men hun ser nå på dette semesteret som svært nyttig og lærerikt.
@@ -34,10 +34,10 @@ Da \emph{"En spillverden på ett semester"} dreier seg om det å skape og utvikl
 \subsection{Forventninger og ambisjoner}
 De første landsbydagene gikk med til flere diskusjoner om hvilke ambisjoner og forventinger vi hadde til Eksperter i Team, gruppen og ikke minst resultatet. Det var samstemt enighet om at vi ønsker en god karakter i faget.
 
-Kjetil hadde delte meninger om Eksperter i Team, hovedsaklig basert på rykter og fortellinger fra andre studenter. Noen mente at dette kurset var et rent tidssluk og "svada", andre sa at det var et av de bedre kursene på NTNU. Det at denne landsbyen var førstevalget hans var dog en motivasjonsfaktor. Trond har hatt inntrykket av at en ofte får jobbe med snedige ting i dette faget, men mye av tiden går med til prosessrelaterte ting i stedet for prosjektrelaterte ting.
+Kjetil hadde delte meninger om Eksperter i Team, hovedsaklig basert på rykter og fortellinger fra andre studenter. Noen mente at dette kurset var et rent tidssluk og ''svada'', andre sa at det var et av de bedre kursene på NTNU. Det at denne landsbyen var førstevalget hans var dog en motivasjonsfaktor. Trond har hatt inntrykket av at en ofte får jobbe med snedige ting i dette faget, men mye av tiden går med til prosessrelaterte ting i stedet for prosjektrelatert arbeid.
 
 \subsection{Samarbeidsavtalen}
-Tidlig i prosjektfasen ble vi sterkt anbefalt å bli enige oss i mellom om hva vi forventer av kurset og mengden arbeid vi planlegger å legge inn i prosjektet, og samle disse tankene og forventningene i en \emph{samarbeidsavtale}. En samarbeidsavtale er en skriftlig avtale inngått mellom alle parter i en samarbeidskontekst som skal danne rammer for hva de ulike partene kan forvente av samarbeidet, og hva de eventuelt ikke kan forvente. Denne avtalen er retningslinjer for samarbeidet, og skal nødvendigvis ikke brukes for å "straffe" medlemmer som bryter avtalen\cite{samarbeidsavtale}.
+Tidlig i prosjektfasen ble vi sterkt anbefalt å bli enige oss i mellom om hva vi forventer av kurset og mengden arbeid vi planlegger å legge inn i prosjektet, og samle disse tankene og forventningene i en \emph{samarbeidsavtale}. En samarbeidsavtale er en skriftlig avtale inngått mellom alle parter i en samarbeidskontekst som skal danne rammer for hva de ulike partene kan forvente av samarbeidet, og hva de eventuelt ikke kan forvente. Denne avtalen er retningslinjer for samarbeidet, og skal nødvendigvis ikke brukes for å ''straffe'' medlemmer som bryter avtalen\cite{samarbeidsavtale}.
 
 Arbeidet med å utrede denne avtalen gikk veldig fint, og det var få uenigheter. Dette styrket i alle fall Kjetil sitt inntrykk av at gruppen var veldig samstemt, selv om medlemmene hadde forskjellig studiebakgrunner.
 
