--- a/prosessrapport/innledning.tex
+++ b/prosessrapport/innledning.tex
@@ -21,26 +21,25 @@ fags egenart og deres måter å arbeide på. Samtidig skal emnet bidra til
 egen fagkunnskap bidrar til prosjektet på."
 \end{quotation}
 
-\subsection{En spillverden på et semester} Som delakere ved EiT tar vi
+\subsection{En spillverden på ett semester} Som delakere ved EiT tar vi
 del i landsbyen \emph{EiT3014: En spillverden på ett semester}.
 Deltakerne i denne landsbyen deles inn i individuelle grupper på fem
 stykker, en sammensetning bestemt av landsbyens leder Maren Agdestein.
 Landsbyens faglige innhold er definert å være: 
 
-\begin{quotation}
-"Studentene skal få større kunnskap om hvordan et dataspill utvikles fra 
-ide til spillbart univers, og skal gjennomføre konseptuelt designarbeid 
+\begin{quotation}''Studentene skal få større kunnskap om hvordan et dataspill utvikles fra 
+idè til spillbart univers, og skal gjennomføre konseptuelt designarbeid 
 basert på problemstillinger relevante for utviklingen av dataspill som 
-tar for seg gjenbruk og/eller resirkulering.""
+tar for seg gjenbruk og/eller resirkulering.''
 \end{quotation}
 
 En ønsker med andre ord å skape et
-produkt som kan bidra til bevistgjøring av klimaspørsmål, samt å gjøre
+produkt som kan bidra til bevisstgjøring av klimaspørsmål, samt å gjøre
 gjenbruk til noe morsomt og underholdende.
 
 I denne sammenhengen har landsbyen hatt mulighet til å samarbeide med
 \emph{Cyberlab}, \emph{Renholdsverket} og \emph{ReMida}, henholdsvis en
-spillutvikler, et avfall- og gjennvinningsfirma og et aktivitetssenter
+spillutvikler, et avfall- og gjenvinningsfirma og et aktivitetssenter
 for barn med et distinkt gjenbrukstema. Samtlige av disse firmaene er
 Trondheimsbaserte. Videre har det vært muligheter for å delta på
 \emph{Norwegian Game Awards}, Norges største spillutviklingskonkurranse,
@@ -48,7 +47,7 @@ samt å stille ut produkt og konsept på Technoport 2012 i forbindelse med
 \emph{Mission Rio}-prosjektet.
 
 \subsection{Problemstilling} Vår problemstilling for prosjektet har
-blitt definert som \emph{"\input{../problemstilling}"} . Ut fra denne
+blitt definert som \emph{"\input{../problemstilling}"}. Ut fra denne
 problemstillingen ledet vi ut et konsept vi har valgt å kalle
 \emph{Garbage Alert}, et spill hvor målet er å (passivt) samle inn
 søppel og avfall for gjenbruk til mer nyttige ting. Prosjektet var ikke
@@ -56,6 +55,6 @@ tenkt å lede ut i et fullstendig spill. Vi hadde dog intensjoner om å
 skape en enkel prototype, for å hjelpe visualiseringen av prosjektet.
 Gjennom å raskt få ferdig noe som vi faktisk kunne prøve ville vi kunne
 fastslå hva som fungerer bra og hva som fungerer dårlig, og dermed
-videreutvikle konseptet. Måten vi arbeidet sammen og gjorde avgjørelser
+videreutvikle konseptet. Måten vi arbeidet sammen og gjorde avgjørelser på
 reflekterer dette valget – vi har ikke vært redde for å utforske
 alternative løsninger på problemstillingen.
