--- a/prosessrapport/avslutning.tex
+++ b/prosessrapport/avslutning.tex
@@ -1,18 +1,22 @@
 \section{Avslutning}
 
-I løpet av semesteret med EiT synes vi selv at vi har hatt stor utviklig som gruppe, og at vi alle er blitt mer bevisst på både
-vår egen og andres rolle i ulike situasjoner. Gruppen er enig om at EiT har gitt mange erfaringer
-som hver enkelt av oss kan bringe videre, både til bruk i resten av studitiden og ikke minst i arbeidslivet. 
+I løpet av semesteret med EiT synes vi selv at vi har hatt stor utviklig
+som gruppe, og at vi alle er blitt mer bevisst på både vår egen og
+andres rolle i ulike situasjoner. Gruppen er enig om at EiT har gitt
+mange erfaringer som hver enkelt av oss kan bringe videre, både til bruk
+i resten av studietiden og ikke minst i arbeidslivet. 
 
 
-Ut i fra tilbakemeldinger fra facilitator har vi som medlemmer i gruppen blitt mer bevisst på kommunikasjonsmønsteret 
-gjennom hele prosessen og utviklet evnen til å se hvilke endringer som kan gjøres for å flytte på et mønster 
-som ikke er tilfredsstillende. Vi har fått verdifulle 
-verktøy om hvordan en selv kan hjelpe gruppen framover med enkle grep og metoder, der det å innta 
-roller som man ser at gruppen kan dra nytte av ligger sentralt.
+Ut i fra tilbakemeldinger fra fasilitator har vi som medlemmer i gruppen
+blitt mer bevisst på kommunikasjonsmønsteret gjennom hele prosessen og
+utviklet evnen til å se hvilke endringer som kan gjøres for å flytte på
+et mønster som ikke er tilfredsstillende. Vi har fått verdifulle verktøy
+om hvordan en selv kan hjelpe gruppen framover med enkle grep og
+metoder, der det å innta roller som man ser at gruppen kan dra nytte av
+ligger sentralt.
 
 I gjennom tiden med EiT har alle gruppens medlemmer måtte tenke over og bli bevisst på sin egen og andres rolle
-i gruppen, noe som har gjort at vi både som indivder og sammen som gruppe har hatt en jevn framgang og læringskurve.
+i gruppen, noe som har gjort at vi både som individer og sammen som gruppe har hatt en jevn framgang og læringskurve.
 
 Fra øvelsen om Person-Gruppe Relasjon lærte gruppen at en ikke nødvendigvis har samme tanker om hvordan en selv
 oppfattes i en situasjon som det resten av gruppen har, og De Bonos Hatter har gitt gruppen et sterkt analyseverktøy 
@@ -33,6 +37,13 @@ Ina er også blitt mer bevisst på hvordan hun oppfører seg i en gruppesituasjo
 EiT som et svært lærerikt halvår.
 
 \item[Kjetil] \hfill \\
+Kjetil synes han har lært mye om hvordan en gruppe henger sammen, og
+hvilke tiltak han kan gjøre for å bedre gruppesamarbeidet. Gjennom
+semesteret har han følt mye på hvordan han opptrer i en gruppe, og fått
+tilbakemeldinger på hvordan gruppen faktisk har oppfattet han. Denne
+åpne dialogen, og de enkle tiltakene for å bedre kommunikasjon er helt
+klart noe han vil ta med seg videre, og forhåpentligvis få brukt i en
+livs- og arbeidssituasjon.
 
 \item[Trond] \hfill \\
 
