fiksa appendiks og lagt til bilder pluss referanse i spillelement

--- a/konseptdokument/appendiks.tex
+++ b/konseptdokument/appendiks.tex
@@ -1,5 +1,19 @@
 \appendix
 \addcontentsline{toc}{section}{Appendiks}
-\section{Prisliste} \label{prisliste}
+\section{Prisliste} \label{A}
 
-\section{Attack-verdier og hitpoints} \label{hitpoints}
+			\begin{figure} [H]
+				\begin{center}
+				\includegraphics[width=155mm]{images/prisliste_stor}
+				\caption{Utkast over prislite}
+				\end{center}
+			\end{figure}
+
+\section{Hitpoints og attack-verdier} \label{B}
+
+			\begin{figure} [H]
+				\begin{center}
+					\includegraphics[width=77mm]{images/hitpoints_attack_stor}
+				\end{center}
+				\caption{Utkast over hitpoints og attackverdier}
+			\end{figure}
