--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -95,6 +95,6 @@ Både mur, våpen og miljøstasjon kan repareres. Prisen på en reparasjon tar e
 \subsubsection{Priser, hitpoints og attack-verdier}
 Under utviklingen og alfa-testingen av spillet har Re3 kommet frem til en prisliste, hitpoints på våpen, mur og miljøstasjon samt attack-verdier for våpnene.\\
 
-Prislisten er utviklet slik at det hele tiden er knapt med ressurser. Det vil si at nesten alle bygninger og oppgraderinger koster noe papp, osv, for at denne ressursen ikke hoper seg opp. Utkastet av prislisten finnes i appendiks 1 (ref !!)
+Prislisten er utviklet slik at det hele tiden er knapt med ressurser. Det vil si at nesten alle bygninger og oppgraderinger koster noe papp, osv, for at denne ressursen ikke hoper seg opp. Utkastet av prislisten finnes i appendiks \ref{A}
 
-Idèen bak hitpoints og attack-verdiene er at to angrep av et type våpen ødelegger en mur bygget av samme ressurs som våpenet. Det vil si at to angrep fra en katapult ødelegger en tremur. Et våpen som er et nivå høyere enn forsvaret vil ødelegge 90\% av muren. Dersom angrepet er to nivå (eller mer) høyere enn forsvaret vil muren bli ødelagt i tillegg til at våpen/miljøstasjon vil ta skade. Et komplett utkast over hitpoints og attack-verdier finnes i appendiks 2 (ref!!)
+Idèen bak hitpoints og attack-verdiene er at to angrep av et type våpen ødelegger en mur bygget av samme ressurs som våpenet. Det vil si at to angrep fra en katapult ødelegger en tremur. Et våpen som er et nivå høyere enn forsvaret vil ødelegge 90\% av muren. Dersom angrepet er to nivå (eller mer) høyere enn forsvaret vil muren bli ødelagt i tillegg til at våpen/miljøstasjon vil ta skade. Et komplett utkast over hitpoints og attack-verdier finnes i appendiks \ref{B}
