--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -4,7 +4,7 @@ Under vil vi beskrive den grafiske fremstillingen av Garbage Alert, beskrive val
 
 Den grafiske fremstillingen i spillet er ment å være leken og rettet mot barn i alle aldre, og er sterkt inspirert av den klassiske spillserien Advance Wars\cite{advancewars}.
 
-Videre har det å holde ting oversiktlig og stort nok til å trykkes på på en berøringsskjerm vært en begrensning vi har forsøkt å overholde.
+Videre har det å holde ting oversiktlig og stort nok til å trykkes på en berøringsskjerm vært en begrensning vi har forsøkt å overholde.
 
 
 \begin{center}
@@ -25,7 +25,7 @@ Videre har det å holde ting oversiktlig og stort nok til å trykkes på på en 
 
 \begin{center}
 	\begin{figure}
-		\includegraphics[width=\textwidth]{images/Eksplosjon.png}
+		\includegraphics{images/Eksplosjon.png}
 		\caption{Ved et angrep på en annen spiller vil et projektil avfyres og eksplodere på motspillerens eventuelle forsvarsstruktur.}
 		\label{fig:Eksplosjon}
 	\end{figure}
@@ -57,7 +57,7 @@ Videre har det å holde ting oversiktlig og stort nok til å trykkes på på en 
 
 \begin{center}
 	\begin{figure}
-		\includegraphics[width=\textwidth]{images/OppgradereEnv.png}
+		\includegraphics{images/OppgradereEnv.png}
 		\caption{Miljøstasjonens effektivitet kan oppgraderes slik at den gjenvinner mer materialer fra hver avfallsenhet.}
 		\label{fig:OppgradereEnv}
 	\end{figure}
@@ -65,4 +65,4 @@ Videre har det å holde ting oversiktlig og stort nok til å trykkes på på en 
 
 
 
-Legg merke til at disse skjermskuddene er tatt av en veldig tidlig prototype som har hatt forkus på å implementere så mye \emph{funksjonalitet} som mulig enn å etablere et konsistent grafisk uttrykk. Vi forsøkte å benytte så mye som mulig av en tidlig prototype videre i den mer avanserte prototypen\footnote{Noen vil kanskje si at dette ble gjort i tråd med landsbyens filosofi om gjenbruk og gjenvinning.}.
+Legg merke til at disse skjermskuddene er tatt av en veldig tidlig prototype som har hatt forkus på å implementere så mye \emph{funksjonalitet} som mulig, heller enn å etablere et konsistent grafisk uttrykk. Vi forsøkte å benytte så mye som mulig av en tidlig prototype videre i den mer avanserte prototypen\footnote{Noen vil kanskje si at dette ble gjort i tråd med landsbyens filosofi om gjenbruk og gjenvinning.}.
