--- a/prosessrapport/innledning.tex
+++ b/prosessrapport/innledning.tex
@@ -28,7 +28,7 @@ stykker, en sammensetning bestemt av landsbyens leder Maren Agdestein.
 Landsbyens faglige innhold er definert å være: 
 
 \begin{quotation}''Studentene skal få større kunnskap om hvordan et dataspill utvikles fra 
-idè til spillbart univers, og skal gjennomføre konseptuelt designarbeid 
+idé til spillbart univers, og skal gjennomføre konseptuelt designarbeid 
 basert på problemstillinger relevante for utviklingen av dataspill som 
 tar for seg gjenbruk og/eller resirkulering.''
 \end{quotation}
