--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -15,14 +15,14 @@ betraktelig.
 
 \subsection{Demotivasjon til motivasjon}
 Da vi møtte opp onsdag 8. februar var den generelle stemningen på
-gruppen at medlemmene var demotiverte. Det at ideen vår fra den
+gruppen at medlemmene var demotiverte. Det at idéen vår fra den
 foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle
 på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake til
 start og gjennom nye idémyldringer, ettersom vi forrige gang endelig
 følte at vi hadde en idé som alle var fornøyde med. Dette utsagnet var
 ikke akkurat noe som bidro til en bedre start på dagen for resten av
 gruppen. Trond og Andreas tenkte at man bare må gjøre det beste ut av
-det, og de startet en diskusjon som gikk ut på å dekomponere ideen vår
+det, og de startet en diskusjon som gikk ut på å dekomponere idéen vår
 fra forrige gang. Kjetil kastet seg på, og motivasjonen hans økte når
 han innså at dette kanskje ikke var verdens undergang. Etter en periode
 med ny brainstorming videreutviklet og endret vi det vi jobbet med
@@ -50,7 +50,7 @@ var. Denne skissen er gjengitt i Figur~\ref{fig:pattern}.
 
 	Dette kom som en overaskelse på gruppen. Det viste seg at Andreas, Kjetil og Trond var mest aktive, mens Ina og Christian var mer passive. Dette måtte diskuteres i gruppen.
 
-	Ina mener at årsaken til hennes passivitet er i tråd med hennes vanlige oppførsel under et gruppearbeid. Hun legger til at hun er meget observant og enig i det som skjer, men at hun ikke alltid legger merke til at hun kan virke passiv for resten av gruppen. Når hun er enig tenker hun ikke over å si dette til resten av gruppen, eller gi de andre hennes godkjennelse. Hvis hun derimot er uenig sier hun ifra. Hun understreker at hun ikke er tilbakeholden eller ukomfortabel med å si ting foran hele gruppen. Ina sier at hun føler seg like aktiv som de andre selv om hun snakker mye mindre. Dette er derimot ikke resten av gruppens oppfatning, som i dette tilfelle oppfattet henne som passiv. Christian var veldig trøtt på morgenen, og merket at han var "litt i kjelleren". Etter en kaffekopp ble han dog mer deltakende i diskusjonen.
+	Ina mener at årsaken til hennes passivitet er i tråd med hennes vanlige oppførsel under et gruppearbeid. Hun legger til at hun er meget observant og enig i det som skjer, men at hun ikke alltid legger merke til at hun kan virke passiv for resten av gruppen. Når hun er enig tenker hun ikke over å si dette til resten av gruppen, eller gi de andre hennes godkjennelse. Hvis hun derimot er uenig sier hun ifra. Hun understreker at hun ikke er tilbakeholden eller ukomfortabel med å si ting foran hele gruppen. Ina sier at hun føler seg like aktiv som de andre selv om hun snakker mye mindre. Dette er derimot ikke resten av gruppens oppfatning, som i dette tilfelle oppfattet henne som passiv. Christian var veldig trøtt på morgenen, og merket at han var ''litt i kjelleren''. Etter en kaffekopp ble han dog mer deltakende i diskusjonen.
 
 	Kjetil mener at det er lett at man uten å tenke over det henvender seg til de som er mest aktive, ettersom man får mer respons fra dem. Andreas sier at grunnen til at vi ikke inkluderer alle ikke har noe med at man trenger aksept fra enkelte av gruppenes medlemmer, men at diskusjonen hoper seg opp der folk er mest aktive. Dette observerte Andreas senere på dagen, da mønsteret flyttet på seg.
 	% Den siste setninga må enten utdypes mer eller sløyfes-
